--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 FLASK_APP = app 
-FLASK_RUN = development
+FLASK_RUN = production
 DATABASE_URI = postgresql://nxesghnj:HQUktWHcnDJcchS0ueATo-U53f3HkPI3@mahmud.db.elephantsql.com/nxesghnj
